added html to validation

--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -10,6 +10,9 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+img{
+  max-width: inherit;
+}
 /*--------Utility Classes------*/
 body{
   background-color:#101240;
@@ -99,4 +102,55 @@ header.primary nav a:hover{
   border-left: 7.5px solid #D94179;
   padding:7.5px;
   border-radius:15px 0;
+}
+#blog{
+background: #104d73;
+padding:20px,0;
+border-top: 6px double #0a96a6;
+border-bottom: 6px double #0a96a6;
+}
+#blog >h2{
+  color:#ffffff;
+text-shadow: 2px 2px black;
+font-size: 2.2rem;
+margin-left:20px;
+}
+#blog article.post{
+background-color: #ffffff;
+margin:20px;
+padding:20px;
+display: grid;
+grid-template-columns: 1fr 3fr;
+grid-template-rows: auto;
+grid-template-areas:
+"figure header"
+"figure post-content"
+"figure footer";
+}
+#blog article figure{
+grid-area: figure;
+margin:0 20px 0 0;
+}
+#blog article header{
+grid-area: header;
+}
+#blog article.post-content{
+grid-area: post-content;
+}
+#blog article.post-meta{
+grid-area: post-meta;
+}
+aside .container{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  gap:40px;
+}
+
+#colophon{
+  text-align:center;
+    background-image: url("https://assets.codepen.io/7248/bg_1.png");
+  background-repeat:no-repeat;
+  background-size:cover;
+  color:#fff;
+  padding:20px;
 }
