--- a/validation/assets/css/style.css
+++ b/validation/assets/css/style.css
@@ -19,5 +19,10 @@ label {
 .line {
     border-bottom: 1px solid #888;
   }
-
+  .error {
+    color: red;
+ padding-left: 5px;
+display: inline;
+  }
+                  
 
