--- a/prototype/assets/css/style.css
+++ b/prototype/assets/css/style.css
@@ -70,6 +70,68 @@ header.primary div.hgroup{
     background-color:rgba(0,0,0, .9);
     text-decoration:underline;
   }
+  header.main-header{
+    background-color: #4254a4;
+    text-align: center;
+    font-size:20px;
+
+  }
+  
+  ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333f76;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: rgb(28, 3, 82);
+}
+
+li.dropdown {
+  display: inline-block;
+
+
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #4254a4;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color:#4254a4 ;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 
 #content{
