added projectreflection page and progressive enhancement post

--- a/prototype/assets/css/style.css
+++ b/prototype/assets/css/style.css
@@ -10,8 +10,13 @@ margin: 20px;
 .main-body{
 background-image: url(https://images.unsplash.com/photo-1496571330383-9b977f4a021d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);  
 background-color:#b2e1ef;
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
+height:100%;
 font-family: Lexend;
 margin: 20px;
+
 
 }
 .container{
@@ -92,7 +97,10 @@ header.primary div.hgroup{
     padding-top: 10px;
   
   }
-  
+  h2{
+    color:#9c142d;
+  }
+
   ul {
   list-style-type: none;
   margin: 0;
@@ -118,7 +126,7 @@ li a:hover {
   background-color: #111;
 }
 li a:hover, .dropdown:hover .dropbtn {
-  background-color: rgb(28, 3, 82);
+  background-color: rgb(82, 3, 29);
 }
 
 li.dropdown {
@@ -130,7 +138,7 @@ li.dropdown {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #4254a4;
+  background-color:#f0a2c2;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -144,7 +152,7 @@ li.dropdown {
   text-align: left;
 }
 
-.dropdown-content a:hover {background-color:#293362 ;
+.dropdown-content a:hover {
 color:floralwhite;}
 
 .dropdown:hover .dropdown-content {
@@ -155,13 +163,36 @@ color:floralwhite;}
 #content{
   line-height: 1.8rem;
 }
+.thoughts{
+  width:50%;
+  height:75%;
+  padding:20px;
+  border-radius: 5px;
+  background-color: #f0a2c2;
+  color:#710f21;
+margin:100px;
+text-align:justify;
+font-size: 18px;
+font-weight: 200;
+
+}
 img{
   height:300px;
   width: 300px;
+}
+dt{
+  text-decoration: underline;
+  font-weight: 600;
+  padding:10px 0;
 }
 
 footer{
 margin-top:800px;
 font-size: large;
+}
+footer.main{
+  color: antiquewhite;
+  text-align: center;
+  font-size: 20px;
 }
 
