--- a/slick-demo/assets/css/style.css
+++ b/slick-demo/assets/css/style.css
@@ -9,11 +9,11 @@ img{
 .container{
     margin:40px auto;
     width:70vw;
-    /* Set Max Content Width */
+   
     max-width:700px;
 }
 
-/* Customize Previous/Next/Dots/Autoplay */
+.fade-container{
 
 .slick-autoplay-toggle-button,
 .slick-prev .slick-prev-icon, .slick-next .slick-next-icon,
@@ -22,7 +22,6 @@ img{
   color: white;
 }
 
-/* Customize Previous/Next/Dots/Autoplay - Active State */
 
 .slick-next:focus .slick-next-icon,
 .slick-next:focus .slick-prev-icon,
@@ -33,4 +32,4 @@ img{
 .slick-autoplay-toggle-button:focus 
 {
     color:black;
-}
+}}
