--- a/currencyconversion/assets/css/style.css
+++ b/currencyconversion/assets/css/style.css
@@ -1,6 +1,9 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: left;
+    font-family: "Noto Serif", serif;
+    font-optical-sizing: auto;
+    font-weight: 200px;
+    font-style: normal;
+    text-align: center;
     margin: 50px;
 }
 .converter {
@@ -10,11 +13,37 @@ body {
     border: 1px solid #ccc;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
-input, select, button {
+
+.formlabel{
+    position: relative;
+   
+}
+.select{
+    position: relative;
+  
+  
+}
+#basecurrency{
+margin-left: 30px;
+}
+#fromdate{
+    margin-left: 60px;
+}
+#todate{
+    margin-left: 80px;
+}
+
+canvas{
+    max-width: 50%;
+    height:600px;
+}
+select,button,input {
     margin: 5px;
     padding: 10px;
     width: 20%;
 }
+
+
 .error {
     color: red;
     padding-left: 5px;
