--- a/microsite/assets/css/style.css
+++ b/microsite/assets/css/style.css
@@ -12,6 +12,7 @@ html {
   #camp{
 max-width: 90%;
   }
+
   /*--------Utility Classes------*/
   body{
   background-color:rgb(241, 245, 250);
@@ -203,6 +204,95 @@ grid-row-end:10;}
   text-decoration: underline;
 
 }
+.error {
+  color: red;
+  font-weight: bold;
+  display: none;
+}
+
+table {
+  width: 50%;
+  margin-top: 20px;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+
+th {
+  background-color: #007BFF;
+  color: white;
+}
+.formlabel
+.select{
+  position:fixed;
+  left: 100px;
+  text-align: center;
+}
+canvas {
+  max-width: 100%;
+  margin-top: 20px;
+}
+#location {
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#search {
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  font-size: 18px;
+  background-color:rgba(9, 84, 169, 0.832);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#search:hover {
+  background-color:rgba(7, 66, 132, 0.832);
+}
+
+
+
+.location-info {
+  margin-top: 20px;
+}
+
+#location-name, #admin-location, #country, #latitude, #longitude {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+#forecast-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+#forecast-table th, #forecast-table td {
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: left;
+}
+
+#forecast-table th {
+  background-color: #f0f0f0;
+}
+
+#forecast-chart {
+  width: 100%;
+  height: 400px;
+  margin-top: 20px;
+}
+
   
 @media screen and (min-width:768px){
   .row{
