--- a/buffalosedge/assets/css/style.css
+++ b/buffalosedge/assets/css/style.css
@@ -42,46 +42,49 @@ html {
       font-family: "capellina-caps", serif;
       font-weight: 600;
       font-style: normal;
-      font-size: 50px;
+      font-size: 40px;
       color: #f6f6fa;
       text-align: left;
-      display: inline;
+      display: flex;
+      float:inline-start;
       padding:10px;
-      margin-left: -100px;
+      
+      justify-content: center;
+      
     }
 
     .navbar{
       background-color: rgb(65,72,51,100);
-      width:100%;
-      height: 40px;
-        overflow: hidden;
-        display:inline;
-        margin-left: 20px;
-      text-align: center;
+      overflow: hidden;
+      text-align: right;
+      padding-top: 65px;
     }
     
     .navbar ul{
       background-color:rgb(65,72,51,100);
 list-style-type: none;
-
+     display:inline;
     }
     .navbar li{
       display: inline;
         padding: 10px;
+       
         margin-left:20px;
     }
-.navbar a{
+.navbar a{ 
     color:#f6f6fa;
     text-align:left;
     text-decoration: none;
     margin-left: 20px;
     font-family: "filson-pro", sans-serif;
     font-weight: 400;
+    font-size:15px;
     font-style: normal;
+    
   
 }
 .logo{
- max-width: 100px;
+ max-width: 80px;
 float:inline-start;
 margin-left: 10px;
 }
@@ -93,7 +96,16 @@ margin-left: 10px;
  grid-column-end: 8;
  grid-row-start: 2;
  grid-row-end:10;
-  text-align: center;
+  text-align: center; 
+  
+}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 2px solid rgb(65,72,51,100);
+  margin: 1em 0;
+  padding: 0;
 }
 h2{
   color:rgb(72, 94, 118, 100);
