added html and css for owner photos and photo links

--- a/buffalosedge/assets/css/style.css
+++ b/buffalosedge/assets/css/style.css
@@ -1,170 +1,256 @@
 html {
-    box-sizing: border-box;
-  }
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  img{
-    max-width: inherit;
-  
-    
-  }
-  body{
-    background-color:rgb(195,197,170,100);
-      background-repeat: no-repeat;
-      background-size:cover;
-      font-family: "filson-pro", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      display: grid;
-      grid-template-columns: repeat(6,1fr);
-      margin: 0;
-      padding:0;
-      gap:10px;
-    }
-  
-    header.primary{
-     background-color:rgb(65,72,51,100);
-     font-size: 20px;
-     grid-column-start: 1;
-     grid-column-end: 12;
-     grid-row-start: 1;
-     grid-row-end: 1;
-     height:100px;
-    
-  
-   
-     
-    
-     
-    }
-    header.primary h1{
-      font-family: "capellina-caps", serif;
-      font-weight: 600;
-      font-style: normal;
-      font-size: 40px;
-      color: #f6f6fa;
-      text-align: left;
-      display: flex;
-      float:inline-start;
-      padding:10px;
-      
-      justify-content: center;
-      
-    }
-
-    .navbar{
-      background-color: rgb(65,72,51,100);
-      overflow: hidden;
-      text-align: right;
-      padding-top: 65px;
-    }
-    
-    .navbar ul{
-      background-color:rgb(65,72,51,100);
-list-style-type: none;
-     display:inline;
-    }
-    .navbar li{
-      display: inline;
-        padding: 10px;
-       
-        margin-left:20px;
-    }
-.navbar a{ 
-    color:#f6f6fa;
-    text-align:left;
-    text-decoration: none;
-    margin-left: 20px;
-    font-family: "filson-pro", sans-serif;
-    font-weight: 400;
-    font-size:15px;
-    font-style: normal;
-    
-  
+  box-sizing: border-box;
 }
-.logo{
- max-width: 80px;
-float:inline-start;
-margin-left: 10px;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 .content{
-  position: relative;
-  margin-top: 20px;
-  margin-left: 100px;
- grid-column-start: 1;
- grid-column-end: 8;
- grid-row-start: 2;
- grid-row-end:10;
-  text-align: center; 
-  
-}
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 2px solid rgb(65,72,51,100);
-  margin: 1em 0;
+  width: 100%;
   padding: 0;
+  margin:0;
+  grid-column-start: 1;
+  grid-column-end: 13;
+  grid-row-start: 2;
+  grid-row-end:10;
+  text-align: center; 
+
+  }
+
+img{
+width: 100%;
+height: auto;
+display: block;
+margin:0;
+
+padding: 0;
+}
+
+.home-bg {
+  width: 100%; 
+  height:400px; 
+  display: block; 
+  margin:0; 
+  padding: 0;
+
+}
+.intro{
+  margin:0 80px 20px 80px
+}
+
+
+
+body{
+  background-color:rgb(195,197,170,100);
+    background-repeat: no-repeat;
+    background-size:cover;
+    font-family: "filson-pro", sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    font-style: normal;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    margin: 0;
+    padding:0;
+    gap:10px;
+  }
+
+  header.primary{
+   background-color:rgb(65,72,51,100);
+   font-size: 20px;
+   grid-column-start: 1;
+   grid-column-end: 13;
+   grid-row-start: 1;
+   grid-row-end: 2;
+   height:80px;
+   margin-bottom: -10px;
+   
+   
+ 
+   
+  
+   
+  }
+  header.primary h1{
+    font-family: "capellina-caps", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 50px;
+    color: #f6f6fa;
+    text-align: left;
+    display: flex;
+    float:inline-start;
+   
+    margin-top: 30px;
+  }
+
+
+  .navbar{
+    background-color: rgb(65,72,51,100);
+    overflow: hidden;
+    text-align: right;
+    padding-top: 50px;
+    grid-column-start: 1;
+    grid-column-end: 10;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    padding-right: 20px;
+    
+  }
+  
+  .navbar ul{
+    background-color:rgb(65,72,51,100);
+   list-style-type: none;
+   display:inline;
+   
+  }
+  .navbar li{
+ list-style-type: none;
+     display: inline-block;
+    
+     
+  }
+.navbar a{ 
+  color:#f6f6fa;
+  text-align:left;
+  text-decoration: none;
+  margin-left: 5px;
+  font-family: "filson-pro", sans-serif;
+  font-weight: 400;
+  font-size:20px;
+  font-style: normal;
+   padding: 0 10px 10px 40px;
+
+}
+.logo{
+max-width: 80px;
+float:inline-start;
+margin-left: 10px;
+padding:10px;
+}
+
+
+
+
+hr {
+display: block;
+height: 1px;
+border: 0;
+border-top: 2px solid rgb(65,72,51,100);
+margin: 1em 0;
+padding: 0;
 }
 h2{
-  color:rgb(72, 94, 118, 100);
-  font-family: "filson-pro", sans-serif;
-  font-weight: 700;
-  font-style: italic;
+color:rgb(72, 94, 118, 100);
+font-family: "filson-pro", sans-serif;
+font-weight: 700;
+font-size: 30px;
+font-style:italic;
+
+margin-top: 20px;
+
 }
- h3{
-  color:rgb(72, 94, 118, 100);
- }
-footer{
-  background-color:rgb(65,72,51,100) ;
-  color:#f6f6fa;
-  width:100%;
-  text-align: center;
-  grid-column-start: 1;
-  grid-column-end: 12;
-  grid-row-start: 10;
-  grid-row-end: 12;
-  clear:both;
+.row {
+  display: flex;
+  max-width: 20%;
+ margin-left: 550px;
+ margin-bottom: 20px;
  
 }
+
+.column {
+  flex: 15%;
+  padding: 10px;
+  
+}
+
+h3{
+color:rgb(72, 94, 118, 100);
+}
+.row-circle{
+  display: flex;
+  max-width: 50%;
+ margin-left: 350px;
+ margin-top: 20px;
+ justify-content: space-between;
+}
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+  font-size: 40px;
+  font-family: "capellina-caps", serif;
+  font-weight: 400;
+  font-style: normal;
+ 
+}
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.links{
+  display:flex;
+  width: 150px;
+  height:150px;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 3px solid rgb(72, 94, 118, 100) ;
+  margin: 0 20px 0 20px;
+ 
+  
+}
+.link{
+  color: #f6f6fa;
+}
+footer{
+background-color:rgb(65,72,51,100) ;
+color:#f6f6fa;
+width:100%;
+text-align: center;
+grid-column-start: 1;
+grid-column-end: 12;
+grid-row-start: 12;
+grid-row-end: 12;
+clear:both;
+
+}
 @media screen and (min-width:768px){
-  .row{
-     grid-template-columns:2,1fr;
-  }
+.row{
+   grid-template-columns:2,1fr;
+}
 nav.navbar ul{
-  display: grid;
-  grid-template-columns: 40% auto ;
- grid-template-areas: 
- "nav nav nav nav"
- ;
+display: grid;
+grid-template-columns: 40% auto ;
+grid-template-areas: 
+"nav nav nav nav"
+;
 
 }
 header.container{
-  max-width: 900px;
-  
-  
-  
-  
-  }
+max-width: 900px;
+
+
+
+
+}
 }
 
 @media screen and (min-width:992px){
-    .row{
-     grid-template-columns:repeat(4, 1fr);
-  }
+  .row{
+   grid-template-columns:repeat(4, 1fr);
+}
 }
 footer a{
-  color:#f6f6fa;
+color:#f6f6fa;
 }
 @media only screen and (max-width: 460px) {
-  .related-links li a svg{display:none;}
-  
+.related-links li a svg{display:none;}
+
 }
 
 @media only screen and (max-width: 395px) {
 .related-links{
 flex-direction:column;
-  }
 }
-    
+}
