--- a/buffalosedge/assets/css/style.css
+++ b/buffalosedge/assets/css/style.css
@@ -1,178 +1,375 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*, *::before, *::after {
   box-sizing: inherit;
 }
-.content{
-  width: 100%;
+
+body {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 10px;
+  margin: 0;
   padding: 0;
-  margin:0;
-  grid-column-start: 1;
-  grid-column-end: 13;
-  grid-row-start: 2;
-  grid-row-end:10;
-  text-align: center; 
-
-  }
-
-img{
-width: 100%;
-height: auto;
-display: block;
-margin:0;
-
-padding: 0;
-}
-
-.home-bg {
-  width: 100%; 
-  height:400px; 
-  display: block; 
-  margin:0; 
-  padding: 0;
-
-}
-.intro{
-  margin:0 80px 20px 80px
-}
-
-
-
-body{
-  background-color:rgb(195,197,170,100);
-    background-repeat: no-repeat;
-    background-size:cover;
-    font-family: "filson-pro", sans-serif;
-    font-weight: 400;
-    font-size: 15px;
-    font-style: normal;
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-    margin: 0;
-    padding:0;
-    gap:10px;
-  }
-
-  header.primary{
-   background-color:rgb(65,72,51,100);
-   font-size: 20px;
-   grid-column-start: 1;
-   grid-column-end: 13;
-   grid-row-start: 1;
-   grid-row-end: 2;
-   height:80px;
-   margin-bottom: -10px;
-   
-   
- 
-   
-  
-   
-  }
-  header.primary h1{
-    font-family: "capellina-caps", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 50px;
-    color: #f6f6fa;
-    text-align: left;
-    display: flex;
-    float:inline-start;
-   
-    margin-top: 30px;
-  }
-
-
-  .navbar{
-    background-color: rgb(65,72,51,100);
-    overflow: hidden;
-    text-align: right;
-    padding-top: 50px;
-    grid-column-start: 1;
-    grid-column-end: 10;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    padding-right: 20px;
-    
-  }
-  
-  .navbar ul{
-    background-color:rgb(65,72,51,100);
-   list-style-type: none;
-   display:inline;
-   
-  }
-  .navbar li{
- list-style-type: none;
-     display: inline-block;
-    
-     
-  }
-.navbar a{ 
-  color:#f6f6fa;
-  text-align:left;
-  text-decoration: none;
-  margin-left: 5px;
+  background-color: rgba(195, 197, 170, 1);
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: "filson-pro", sans-serif;
   font-weight: 400;
-  font-size:20px;
-  font-style: normal;
-   padding: 0 10px 10px 40px;
-
-}
-.logo{
-max-width: 80px;
-float:inline-start;
-margin-left: 10px;
-padding:10px;
+  font-size: 15px;
 }
 
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
 
 
+header.primary {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  padding: 0 20px;
+  margin-bottom:-10px;
+  background-color: rgb(65, 72, 51, 1);
+  height: auto;
+  grid-column: 1 / -1;
+  overflow: visible;
+  
+}
+
+header.primary h1 {
+  font-family: "capellina-caps", serif;
+  font-weight: 400;
+  font-size: 50px;
+  color: #f6f6fa;
+ margin-right: 20px;
+ margin-left: 20px;
+  max-width: 400px;
+  
+}
+.menu-toggle {
+  background: none;
+  border: none;
+  color: #f6f6fa;
+  font-size: 32px;
+  cursor: pointer;
+  display: none;
+}
+.navbar {
+  background-color: transparent;
+  
+}
+
+.navbar ul {
+  display: flex;
+  gap: 1.5rem;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.navbar li {
+  list-style-type: none;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #f6f6fa;
+  font-family: "filson-pro", sans-serif;
+  font-size: 18px;
+}
+
+
+.now:link, .now:visited{
+  background-color:rgba(72, 94, 118, 1) ;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius:5px;
+  
+  
+}
+.now:hover, .now:active {
+  background-color:rgb(105, 136, 170);
+}
+.logo {
+  max-width: 80px;
+  height: auto;
+  display: block;
+}
+
+h2.title {
+  font-family: "Caveat", cursive;
+  font-weight: 700;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  color: #f6f6fa;
+  text-align: center;
+  font-size: 80px;
+  text-shadow: 3px 3px rgb(39, 43, 31);
+  padding: 30px;
+  max-width: 90%;
+}
+h2.cabin-title {
+  font-family: "Caveat", cursive;
+  font-weight: 700;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  color: #f6f6fa;
+  text-align: center;
+  font-size: 80px;
+  text-shadow: 3px 3px rgb(39, 43, 31);
+  padding: 30px;
+  max-width: 90%;
+}
+
+
+.tag {
+  display: block;
+  margin: 40px auto; 
+  padding: 20px;
+  max-width: 500px; 
+  text-align: center;
+  border: 3px solid #485E76;
+  background-color: #485E76;
+  border-radius: 25px;
+  color: white;
+
+}
+.cabin-tag{
+  display: block; 
+  margin: 40px auto; 
+  padding: 20px;
+  max-width: 500px; 
+  text-align: center;
+  border: 3px solid #485E76;
+  background-color: #485E76;
+  border-radius: 25px;
+  color: white;
+}
+
+.content {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  grid-column: 1 / -1;
+  grid-row: 2 / 10;
+  text-align: left;
+  line-height: 2;
+}
+
+.content h3,
+h3.owners {
+  color: #755d33;
+  font-size: 25px;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.intro {
+  margin: 100px 80px 60px 80px;
+}
+.cabin-intro{
+  margin: 40px 80px 20px 80px;
+}
+
+.home-bg,
+.cabin-bg {
+  width: 100%;
+  height: 600px;
+  display: block;
+  position: relative;
+  z-index: 1;
+  margin:0;
+  padding: 0;
+}
+
+.cabin-bg {
+  height:800px;
+}
 
 hr {
-display: block;
-height: 1px;
-border: 0;
-border-top: 2px solid rgb(65,72,51,100);
-margin: 1em 0;
-padding: 0;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 2px solid rgba(65, 72, 51, 1);
+  margin: 1em 0;
+  padding: 0;
 }
-h2{
-color:rgb(72, 94, 118, 100);
-font-family: "filson-pro", sans-serif;
-font-weight: 700;
-font-size: 30px;
-font-style:italic;
+.carousel3d-container {
+  position: relative;
+  height: 400px; 
+  max-width: 800px;
+  margin: 0 auto 100px auto;
+  padding: 0 20px;
+  overflow: visible;
+}
 
-margin-top: 20px;
+.carousel3d {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
 
+.carousel3d img {
+  position: absolute;
+  width: 800px;           
+  height: 300px;        
+  left: 250px;         
+  top: 100px;           
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4); 
+  transition: transform 0.5s;
+}
+
+.nav-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  font-size: 2rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.nav-button.prev {
+  left: 10px;
+}
+
+.nav-button.next {
+  right: 10px;
+}
+h2 {
+  color: rgba(72, 94, 118, 1);
+  font-family: "filson-pro", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  font-style: italic;
+  margin-top: 20px;
+}
+
+.widget{
+  display:inline-block;
+  margin:20px;
+
+}
+.rates{
+  text-align: center;
+  background-image: url(https://images.unsplash.com/photo-1536259450465-9e7813c64526?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+ background-size: 100%;
+ width: 90%;
+ max-width: 500px;
+ margin: 0 auto 20px auto;
+}
+.night{
+  
+  text-shadow:2px 2px #f6f9fb ;
+  color:rgb(65, 72, 51, 1);
+}
+.week{
+    
+  text-shadow:2px 2px #f6f9fb;
+  color:rgb(65, 72, 51, 1);
+}
+.price{
+  text-shadow: 2px 2px #485E76;
+  color:#f6f6fa;
+  font-size: 40px;
+}
+
+.book:link, .book:visited{
+  background-color:rgb(65, 72, 51, 1) ;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  margin: 20px auto;
+  display: block;
+  width: fit-content;
+
+}
+.book:hover, .book:active {
+  background-color:rgb(103, 113, 81);
+}
+.included{
+  margin-left:80px;
+  margin-bottom: 50px;
+  text-decoration: none;
+}
+.items{
+float:left;
+width:50%;
+}
+.included:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.feature{
+  text-align:center;
+  margin-bottom:100px;
 }
 .row {
   display: flex;
-  max-width: 20%;
- margin-left: 550px;
- margin-bottom: 20px;
- 
+  flex-wrap: wrap;
+  margin-left: 0;
+  margin-bottom: 20px;
 }
 
 .column {
-  flex: 15%;
+  flex: 1 1 20%;
   padding: 10px;
-  
+ 
+}
+.own{
+  margin-left:450px;
 }
 
-h3{
-color:rgb(72, 94, 118, 100);
+.boss {
+  background-color: red;
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-left: 10px;
+  margin-bottom: 200px;
+  padding: 0;
 }
-.row-circle{
+
+.row-circle {
   display: flex;
   max-width: 50%;
- margin-left: 350px;
- margin-top: 20px;
- justify-content: space-between;
+  margin-left:450px;
+  margin-top:100px;
 }
+.row-circle2 {
+  display: flex;
+  max-width: 50%;
+  margin-left:450px;
+  margin-top:20px;
+ 
+}
+
+
+
+
 .container {
   position: relative;
   text-align: center;
@@ -181,76 +378,236 @@ color:rgb(72, 94, 118, 100);
   font-family: "capellina-caps", serif;
   font-weight: 400;
   font-style: normal;
- 
 }
+
 .center {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-shadow: -1px -1px 0 #00000019, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
-.links{
-  display:flex;
+
+.links {
+  display: flex;
   width: 150px;
-  height:150px;
+  height: 150px;
   overflow: hidden;
   border-radius: 50%;
-  border: 3px solid rgb(72, 94, 118, 100) ;
-  margin: 0 20px 0 20px;
- 
-  
+  border: 3px solid rgba(72, 94, 118, 1);
+  margin: 0 20px;
+  transition: transform 0.3s ease, background-color 0.3s ease;
 }
-.link{
+
+.links:hover {
+  transform: scale(1.5);
+  background-color: rgba(195, 197, 170, 1);
+}
+
+.link {
   color: #f6f6fa;
 }
-footer{
-background-color:rgb(65,72,51,100) ;
-color:#f6f6fa;
-width:100%;
-text-align: center;
-grid-column-start: 1;
-grid-column-end: 12;
-grid-row-start: 12;
-grid-row-end: 12;
-clear:both;
-
-}
-@media screen and (min-width:768px){
-.row{
-   grid-template-columns:2,1fr;
-}
-nav.navbar ul{
-display: grid;
-grid-template-columns: 40% auto ;
-grid-template-areas: 
-"nav nav nav nav"
-;
-
-}
-header.container{
-max-width: 900px;
 
 
-
-
-}
-}
-
-@media screen and (min-width:992px){
-  .row{
-   grid-template-columns:repeat(4, 1fr);
-}
-}
-footer a{
-color:#f6f6fa;
-}
-@media only screen and (max-width: 460px) {
-.related-links li a svg{display:none;}
-
+footer {
+  background-color: rgba(65, 72, 51, 1);
+  color: #f6f6fa;
+  width: 100%;
+  font-size: 20px;
+  text-align: center;
+  grid-column: 1 / -1;
+  grid-row: 12 / 13;
+  clear: both;
 }
 
-@media only screen and (max-width: 395px) {
-.related-links{
-flex-direction:column;
+footer a {
+  color: #f6f6fa;
 }
+@media screen and (max-width: 767px) {
+  .logo {
+    max-width: 60px;
+    margin: 0 auto;
+  }
+  header.primary {
+    grid-template-columns: 1fr;
+    height: auto;
+    padding: 10px;
+    text-align: center;
+  }
+
+  header.primary h1 {
+    font-size: 28px;
+    max-width: 100%;
+    margin: 10px auto;
+  }
+  .menu-toggle {
+    display: block;
+    margin-top: 10px;
+  }
+
+  .navbar {
+    display: none;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar.open {
+    display: flex;
+  }
+
+  .navbar ul {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  .navbar li {
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar a {
+    display: block;
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+  }
+
+  .now {
+    margin-top: 10px;
+  }
+
+  .now {
+    margin-top: 10px;
+  }
+  .now:link, .now:visited {
+    background-color: rgba(72, 94, 118, 1);
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 5px;
+    margin: 0;
+    font-size: 16px;
+  }
+  .carousel3d-container {
+    height: auto;
+    padding: 0;
+  }
+
+  .carousel3d img {
+    position: static;
+    width: 100%;
+    height: auto;
+  }
+
+  .nav-button.prev, .nav-button.next {
+    position: static;
+    margin: 10px auto;
+    display: block;
+  }
+  .nav-button {
+    position: absolute;
+    top: 40%;
+    font-size: 1.5rem;
+    padding: 0.25rem 0.75rem;
+  }
+
+  .nav-button.prev {
+    left: 5px;
+  }
+
+  .nav-button.next {
+    right: 5px;}
+
+  h2.title,
+  h2.cabin-title {
+    font-size: 36px;
+    position: static;
+    margin: 20px auto;
+    transform: none;
+    text-align: center;
+  }
+
+  .intro,
+  .cabin-intro {
+    margin: 20px;
+  }
+
+  .items {
+    float: none;
+    width: 100%;
+  }
+
+  .included {
+    margin: 0 20px 50px 20px;
+  }
+
+  .row-circle,
+.row-circle2 {
+  flex-direction: column;
+  align-items: center;
+  margin: 20px auto;
+  max-width: 100%;
+}
+
+  .own {
+    margin: 0 auto;
+    text-align: center;
+  }  
+  .tag {
+    margin: 40px 0 ;
+    max-width: 80%;
+    
+  }
+}
+
+@media screen and (min-width: 768px) {
+
+  .row {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  nav.navbar ul {
+    display: grid;
+    grid-template-columns: repeat(8, auto);
+  }
+
+  header.container {
+    max-width: 900px;
+  }
+  .carousel3d-container {
+    max-width: 800px;
+    height: 400px;
+  }
+
+  .carousel3d img {
+    width: 400px;
+    height: 300px;
+    left: 180px;
+    top: 100px;
+  }
+  .nav-button {
+    width: 30px;
+    height: 50px;
+    font-size: 1.5rem;
+  }
+  .row-circle,
+  .row-circle2 {
+    margin: 40px auto;
+    justify-content: center;
+    max-width: 90%;
+  }
+
+}
+
+
+@media screen and (min-width: 992px) {
+  .row {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
