--- a/buffalosedge/assets/css/style.css
+++ b/buffalosedge/assets/css/style.css
@@ -28,41 +28,27 @@ img {
   padding: 0;
 }
 
-
 header.primary {
-  display: grid;
-  grid-template-columns: auto 1fr auto;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  margin-bottom:-10px;
-  background-color: rgb(65, 72, 51, 1);
-  height: auto;
+  background-color: rgb(65, 72, 51);
   grid-column: 1 / -1;
-  overflow: visible;
-  
+  margin: 0;
 }
+
 
 header.primary h1 {
   font-family: "capellina-caps", serif;
-  font-weight: 400;
   font-size: 50px;
   color: #f6f6fa;
- margin-right: 20px;
- margin-left: 20px;
-  max-width: 400px;
-  
+  margin: 0 20px;
 }
-.menu-toggle {
-  background: none;
-  border: none;
-  color: #f6f6fa;
-  font-size: 32px;
-  cursor: pointer;
-  display: none;
-}
+
 .navbar {
   background-color: transparent;
-  
+  margin-top: 30px;
 }
 
 .navbar ul {
@@ -92,6 +78,7 @@ header.primary h1 {
   text-decoration: none;
   display: inline-block;
   border-radius:5px;
+  margin-top: -10px;
   
   
 }
@@ -108,7 +95,7 @@ h2.title {
   font-family: "Caveat", cursive;
   font-weight: 700;
   position: absolute;
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
@@ -117,7 +104,10 @@ h2.title {
   font-size: 80px;
   text-shadow: 3px 3px rgb(39, 43, 31);
   padding: 30px;
-  max-width: 90%;
+  width: 100%;
+  max-width: 100%;
+  white-space: normal;
+  box-sizing: border-box;
 }
 h2.cabin-title {
   font-family: "Caveat", cursive;
@@ -184,21 +174,18 @@ h3.owners {
 .cabin-intro{
   margin: 40px 80px 20px 80px;
 }
-
-.home-bg,
-.cabin-bg {
+.hero {
+  position: relative;
   width: 100%;
   height: 600px;
-  display: block;
-  position: relative;
-  z-index: 1;
-  margin:0;
-  padding: 0;
+  margin-top:-10px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.cabin-bg {
-  height:800px;
-}
+
+
 
 hr {
   display: block;
@@ -278,6 +265,7 @@ h2 {
  width: 90%;
  max-width: 500px;
  margin: 0 auto 20px auto;
+ border-radius: 5%;
 }
 .night{
   
@@ -294,7 +282,19 @@ h2 {
   color:#f6f6fa;
   font-size: 40px;
 }
+.canoe{
+  text-align: center;
+  text-shadow: 2px 2px #485E76;
+  color:#f6f6fa;
+  font-size: 30px;
+}
 
+.shuttle{
+  color: #755d33;
+  font-size: 25px;
+  text-align: center;
+  margin: 20px;
+}
 .book:link, .book:visited{
   background-color:rgb(65, 72, 51, 1) ;
   color: white;
@@ -304,10 +304,23 @@ h2 {
   margin: 20px auto;
   display: block;
   width: fit-content;
+  border-radius:5%;
 
 }
 .book:hover, .book:active {
   background-color:rgb(103, 113, 81);
+}
+.table{
+  margin-left: auto;
+  margin-right: auto;
+ margin-bottom: 200px;
+ 
+}
+th,td{
+ padding:10px;
+}
+table, th, td {
+  border: 2px solid rgb(65, 72, 51, 1);
 }
 .included{
   margin-left:80px;
@@ -440,10 +453,7 @@ footer a {
     max-width: 100%;
     margin: 10px auto;
   }
-  .menu-toggle {
-    display: block;
-    margin-top: 10px;
-  }
+
 
   .navbar {
     display: none;
@@ -479,9 +489,7 @@ footer a {
     margin-top: 10px;
   }
 
-  .now {
-    margin-top: 10px;
-  }
+
   .now:link, .now:visited {
     background-color: rgba(72, 94, 118, 1);
     color: white;
@@ -492,6 +500,15 @@ footer a {
     border-radius: 5px;
     margin: 0;
     font-size: 16px;
+  }
+  h2.title {
+    position: static;
+    transform: none;
+    font-size: 36px;
+    padding: 20px;
+    margin: 0 auto;
+    text-align: center;
+    
   }
   .carousel3d-container {
     height: auto;
